update swagger #36 #54
